--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             <img src="assets/img/me.PNG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Project Manager &amp; Graphic Designer.</h2>
+            <h2>Project Manager &amp;.</h2>
             <p class="fst-italic py-3">
-             Results-driven Project Manager & Graphic Designer with 4 years of experience in the UAE and Saudi Arabia, delivering IT and creative projects on time and within budget. Skilled in Agile methodologies, cross-functional team leadership, and IT project coordination, combined with strong expertise in graphic design and digital branding. Adept in bridging technical and creative requirements to deliver solutions that align with business goals.
+Results-driven IT Project Manager with 4 years of experience in Saudi Arabia and UAE. Specialized in Agile project management, Scrum, and Waterfall methodologies. Skilled in leading cross-functional teams, reducing project delays, and delivering IT solutions aligned with business objectives. Strong background in stakeholder management, requirements gathering, and digital branding.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -132,7 +132,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-emoji-smile"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1" class="purecounter"></span>
               <p>Happy Clients</p>
             </div>
           </div><!-- End Stats Item -->
@@ -140,7 +140,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-journal-richtext"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
           </div><!-- End Stats Item -->
@@ -203,21 +203,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Graphic Design Tools</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Stakeholder Management</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span> Canvas </span> <i class="val">90%</i></span>
+              <span class="skill"><span>Requirements Gathering</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
+              <span class="skill"><span>Leadership</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -247,9 +247,9 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
+              <h4>Mohamad Osman</h4>
 <p>             
-  Results-driven Project Manager & Graphic Designer with 4 years of experience in the UAE and Saudi Arabia, delivering IT and creative projects on time and within budget. Skilled in Agile methodologies, cross-functional team leadership, and IT project coordination, combined with strong expertise in graphic design and digital branding. Adept in bridging technical and creative requirements to deliver solutions that align with business goals.
+Results-driven IT Project Manager with 4 years of experience in Saudi Arabia and UAE. Specialized in Agile project management, Scrum, and Waterfall methodologies. Skilled in leading cross-functional teams, reducing project delays, and delivering IT solutions aligned with business objectives. Strong background in stakeholder management, requirements gathering, and digital branding.
 
 </p>              
             </div><!-- Edn Resume Item -->
@@ -277,17 +277,7 @@
               </ul>
             </div><!-- Edn Resume Item -->
 
-            <div class="resume-item">
-              <h4>Graphic Designer </h4>
-              <h5>2021 - 2023</h5>
-              <p><em>Aguila Tech Solutions, Sharjah, UAE</em></p>
-              <ul>
-<li>Designed digital assets, UI/UX mockups, and corporate branding materials.</li>
-<li>Collaborated with IT teams to deliver visuals for websites and mobile apps.</li>
-<li>Delivered creative projects using Canva and Figma, ensuring timely client approval.</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
-
+           
             <div class="resume-item">
               <h4>IT Project Manager </h4>
               <h5>2023 - present</h5>
