--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <h2>Brandon Johnson</h2>
-            <p>I'm <span class="typed" data-typed-items="Designer,Project Manager, Freelancer,">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <h2>Mohamad Osman</h2>
+            <p>I'm <span class="typed" data-typed-items="Project Manager, Project Coordinator">PMP\PMO</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="#"><i class="bi bi-instagram"></i></a>
               <a href="#"><i class="bi bi-linkedin"></i></a>
@@ -91,7 +91,7 @@
             <img src="assets/img/me.PNG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Project Manager &amp;.</h2>
+            <h2>Project Manager.</h2>
             <p class="fst-italic py-3">
 Results-driven IT Project Manager with 4 years of experience in Saudi Arabia and UAE. Specialized in Agile project management, Scrum, and Waterfall methodologies. Skilled in leading cross-functional teams, reducing project delays, and delivering IT solutions aligned with business objectives. Strong background in stakeholder management, requirements gathering, and digital branding.
             </p>
